@@ -58,16 +58,17 @@ static int waitforring_exec(struct ast_channel *chan, void *data)
 	struct ast_module_user *u;
 	struct ast_frame *f;
 	int res = 0;
+	double s;
 	int ms;
 
-	if (!data || (sscanf(data, "%d", &ms) != 1)) {
+	if (!data || (sscanf(data, "%lg", &s) != 1)) {
                 ast_log(LOG_WARNING, "WaitForRing requires an argument (minimum seconds)\n");
 		return 0;
 	}
 
 	u = ast_module_user_add(chan);
 
-	ms *= 1000;
+	ms = s*1000.0;
 	while(ms > 0) {
 		ms = ast_waitfor(chan, ms);
 		if (ms < 0) {
